fix: Improve elements' affordance & feedback
Buttons are too small. To increase interactive area, page accepts
clicks and taps on the floor itself. But there is lack of affordance
and user feedback. These changes allow to:

1. indicate clickable elements with pointer cursor;
2. give feedback on clicks/taps by toggling floor button.

--- a/src/visual.css
+++ b/src/visual.css
@@ -24,6 +24,7 @@ body {
   height: var(--floor-height);
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .floor:not(:first-child) {
@@ -110,8 +111,10 @@ body {
   border-style: outset;
   border-color: burlywood;
   background-color: whitesmoke;
+  cursor: pointer;
 }
 
-.floor-btn:active {
+.floor-btn:active,
+.floor-btn.active {
   border-style: inset;
 }
